Edit s3upload.service in storage_service
