# backend/services/storage_service/src/controllers/upload.controller.ts
@@ -1,6 +1,8 @@
 import { NextFunction, Request, Response } from "express";
+import jwt from "jsonwebtoken";
 import * as s3uploadService from "../services/s3-upload.service";
 import { AppError } from "../utils/app-error";
+import Config from "../config";
 
 export async function handleUploadImage(req: Request, res: Response, next: NextFunction) {
     if (!req.file) {
@@ -12,8 +14,13 @@ export async function handleUploadImage(req: Request, res: Response, next: NextF
             file: req.file,
             fileId: req.body.fileId,
         });
+
+        const token = jwt.sign({
+            ...result,
+            userId: req.user.sub,
+        }, Config.FILE_UPLOAD_SECRET || "", { expiresIn: "10m" });
         
-        res.status(201).send(result);
+        res.status(201).send({ token });
     } catch (error) {
         next(error);
     }
@@ -21,10 +28,15 @@ export async function handleUploadImage(req: Request, res: Response, next: NextF
 
 export async function handleInitializeS3MultipartUpload(req: Request, res: Response, next: NextFunction) {
     const fileId = req.body.fileId;
+    const fileName = req.body.fileName;
     const partCount = +req.body.partCount;
 
     try {
-        const result = await s3uploadService.initializeMultipartUpload(fileId, partCount);
+        const result = await s3uploadService.initializeMultipartUpload({
+            fileId,
+            partCount,
+            fileName,
+        });
         
         res.status(201).send(result);
     } catch (error) {
@@ -38,7 +50,12 @@ export async function handleCompleteS3MultipartUpload(req: Request, res: Respons
     try {
         const result = await s3uploadService.completeMultipartUpload(uploadId, fileId, parts);
 
-        res.status(200).send(result);
+        const token = jwt.sign({
+            ...result,
+            userId: req.user.sub,
+        }, Config.FILE_UPLOAD_SECRET || "", { expiresIn: "10m" });
+        
+        res.status(200).send({ token });
     } catch (error) {
         next(error);
     }
